Update upstream zstd source code

--- a/zstd/examples/Makefile
+++ b/zstd/examples/Makefile
@@ -22,7 +22,7 @@ all: simple_compression simple_decompression \
 	multiple_streaming_compression streaming_memory_usage
 
 $(LIB) :
-	make -C ../lib libzstd.a
+	$(MAKE) -C ../lib libzstd.a
 
 simple_compression : simple_compression.c $(LIB)
 	$(CC) $(CPPFLAGS) $(CFLAGS) $^ $(LDFLAGS) -o $@
