--- a/zstd/.travis.yml
+++ b/zstd/.travis.yml
@@ -10,7 +10,7 @@ addons:
 matrix:
   include:
     # Ubuntu 14.04
-    - env: Cmd='make gcc6install && CC=gcc-6 make -j all && make clean && CC=gcc-6 make clean uasan-test-zstd </dev/null' # also test when stdin is not a tty
+    - env: Cmd='make gcc6install && CC=gcc-6 make -j all && make clean && CC=gcc-6 make clean uasan-test-zstd'
     - env: Cmd='make gcc6install libc6install && CC=gcc-6 make clean uasan-test-zstd32'
     - env: Cmd='make gcc7install && CC=gcc-7 make clean uasan-test-zstd'
     - env: Cmd='make clang38install && CC=clang-3.8 make clean msan-test-zstd'
@@ -25,12 +25,7 @@ matrix:
     - env: Cmd='make valgrindinstall && make -C tests clean valgrindTest'
 
     - env: Cmd='make arminstall && make armfuzz'
-
-# Following test is disabled, as there is a bug in Travis' ld
-# preventing aarch64 compilation to complete.
-# > collect2: error: ld terminated with signal 11 [Segmentation fault], core dumped
-# to be re-enabled in a few commit, as it's possible that a random code change circumvent the ld bug
-#    - env: Cmd='make arminstall && make aarch64fuzz'
+    - env: Cmd='make arminstall && make aarch64fuzz'
 
     - env: Cmd='make ppcinstall && make ppcfuzz'
     - env: Cmd='make ppcinstall && make ppc64fuzz'
@@ -41,6 +36,14 @@ matrix:
     # tag-specific test
     - if: tag =~ ^v[0-9]\.[0-9]
       env: Cmd='make -C tests checkTag && tests/checkTag $TRAVIS_BRANCH'
+
+    # additional tests for master branch and cron job
+    - env: Cmd="make test"
+      os: osx
+    - env: Cmd='make clang38install && CC=clang-3.8 make clean tsan-test-zstream'
+    - env: Cmd='make cxxtest && make clean && make gnu90build && make clean && make cmakebuild && make clean && make travis-install'
+    - env: Cmd='make gpp6install valgrindinstall && make -C zlibWrapper test && make -C zlibWrapper valgrindTest'
+
 
 git:
   depth: 1
